# dualrag

./: README.md  debug_ner.py  docker-compose.yml  pyproject.toml
data/: corpus.txt
data/chroma_db/: chroma.sqlite3
src/: config.py  kg_construction.py  main.py  qa_pipeline.py  query_enhancer.py  retriever.py
