[project]
name = "dualrag"
version = "0.1.0"
description = "DualGraphRAG: A Dual-View Graph-Enhanced RAG Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
